Fixes interface button display and form overflow in IE7.

--- a/src/stylesheets/scaffold/forms.css
+++ b/src/stylesheets/scaffold/forms.css
@@ -1,6 +1,7 @@
 form {
 	background:#f1f1f1;
 	border:1px solid #ccc;
+	overflow:hidden;
 	padding:1.5em 1.5em 0 1.5em;
 	
 	-webkit-border-radius:7px;
